--- a/Styles/Style.css
+++ b/Styles/Style.css
@@ -20,3 +20,15 @@ h2{
 div{
 
 }
+
+.links{
+    color: #6A5ACD;
+    text-decoration: none;
+}
+
+a:hover{
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: black;
+    border:3px solid pink;
+}
+
