--- a/Styles/Style.css
+++ b/Styles/Style.css
@@ -4,12 +4,12 @@
     }
 
 h1{
-    color: #FF4500;
+    color: #808000;
     font-family: Arial, Helvetica, sans-serif;
 }
 
 #me{
-    color:#FF6347
+    color:#6B8E23;
 }
 
 h2{
@@ -17,8 +17,15 @@ h2{
     font-family: Arial, Helvetica, sans-serif;
 }
 
-div{
+body{
+    background-image: url("https://cdn.shopify.com/s/files/1/0305/4075/9177/products/papel-de-parede-adesivo-folha-natureza-n02268-273452.jpg?v=1643339362");
+}
 
+div{
+    background-color: white;
+    padding: 10px 20px 30px 40px;
+    border: 2px solid black;
+    margin: 20px 40px;
 }
 
 .links{
@@ -31,4 +38,5 @@ a:hover{
     color: black;
     border:3px solid pink;
 }
+
 
