--- a/Styles/Style.css
+++ b/Styles/Style.css
@@ -39,4 +39,14 @@ a:hover{
     border:3px solid pink;
 }
 
+#image1:hover {
+    transform: scale(1.3);
+    transition: 0.5s;
+}
 
+#image2:hover{
+    border-radius: 350px;
+    height: 350px;
+    transform: scale(1.5);
+    transition: 0.5s;
+ }
