--- a/Styles/Style.css
+++ b/Styles/Style.css
@@ -1,52 +1,69 @@
-*{
-    color:rgb(1, 4, 5);
-    font-family:Arial, Helvetica, sans-serif
+* {
+    color: rgb(1, 4, 5);
+    font-family: Arial, Helvetica, sans-serif
+}
+
+h1 {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    color: black;
+    border: 4px dotted #8FBC8B;
+    border-width: 7px 8px 4px 5px;
     }
 
-h1{
+h1:hover{
     color: #808000;
     font-family: Arial, Helvetica, sans-serif;
+    border:  none;
 }
 
-#me{
-    color:#6B8E23;
+#me {
+    color: #6b8e23;
 }
 
-h2{
+h2 {
     color: Orange;
     font-family: Arial, Helvetica, sans-serif;
 }
 
-body{
+body {
     background-image: url("https://cdn.shopify.com/s/files/1/0305/4075/9177/products/papel-de-parede-adesivo-folha-natureza-n02268-273452.jpg?v=1643339362");
 }
 
-div{
+div {
     background-color: white;
     padding: 10px 20px 30px 40px;
     border: 2px solid black;
     margin: 20px 40px;
 }
 
-.links{
+#parte1 {
+    background-color: bisque;
+}
+
+.links {
     color: #6A5ACD;
     text-decoration: none;
 }
 
-a:hover{
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+a:hover {
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     color: black;
-    border:3px solid pink;
+    border: 3px solid pink;
 }
 
 #image1:hover {
     transform: scale(1.3);
     transition: 0.5s;
+    border: none;
 }
 
-#image2:hover{
+#image1{
+    border: 3px solid black;
+}
+
+#image2:hover {
     border-radius: 350px;
     height: 350px;
     transform: scale(1.5);
     transition: 0.5s;
- }
+}
